<resources>
    <string name="app_name">IWDG</string>
    <string name="ok">Ok</string>
    <string name="latitude_longitude">%1$.5f, %2$.5f</string>
    <string name="dialog_create_sighting_msg">Submit a Sighting at this Location?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_remove_marker">Remove marker?</string>
    <string name="dialog_report_sighting_selected">Report a Sighting at...</string>
    <string name="dialog_current_location">Current Location</string>
    <string name="dialog_chosen_location">A Location I\'ll Choose</string>
    <string name="enter_hotspot_title">Hotspot Alert!</string>
    <string name="hotspot_notification">Hotspot Notifications</string>
    <string name="dialog_hotspot_hotspot_selected">Create a Hotspot at...</string>
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">
        The version of Google Play services on this device is not authentic
    </string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">
        The app is not licensed to the user
    </string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="unable_to_create_maps">Sorry! Unable to create maps</string>
    <string name="submit_form_latitude">Latitude:</string>
    <string name="submit_form_longitude">Longitude:</string>
    <string name="submit_form_species">Species:</string>
    <string name="submit_form_date">Date:</string>
    <string name="submit_form_coordinates">Co-ordinates:</string>
    <string name="submit_form_animals">Number of Animals Seen</string>
    <string name="submit_form_location">Locale</string>
    <string name="submit_form_county">County:</string>
    <string name="submit_form_btn">Submit</string>
    <string name="submit_form_inclphoto">Incl. Photo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="menu_items_array">
        <item>All Sightings</item>
        <item>Report a Sighting</item>
        <item>Search Sightings</item>
        <item>Species Guide</item>
    </string-array>
    <string-array name="species_array">
        <item>Any...</item>
        <item>atlantic white-sided dolphin</item>
        <item>beluga whale</item>
        <item>blue whale</item>
        <item>bottlenose dolphin</item>
        <item>common dolphin</item>
        <item>Cuvier\'s beaked whale</item>
        <item>false killer whale</item>
        <item>fin whale</item>
        <item>Gervais\' beaked whale</item>
        <item>harbour porpoise</item>
        <item>humpback whale</item>
        <item>killer whale</item>
        <item>Long-finned pilot whale</item>
        <item>minke whale</item>
        <item>northern bottlenose whale</item>
        <item>northern right whale</item>
        <item>pygmy sperm whale</item>
        <item>Risso\'s dolphin</item>
        <item>sei whale</item>
        <item>Sowerby\'s beaked whale</item>
        <item>sperm whale</item>
        <item>striped dolphin</item>
        <item>True\'s beaked whale</item>
        <item>Unidentified Whale or Dolphin</item>
        <item>white-beaked dolphin</item>
    </string-array>
    <string-array name="species_array_id">
        <item>atlanticwhitesideddolphin</item>
        <item>belugawhale</item>
        <item>bluewhale</item>
        <item>bottlenosedolphin</item>
        <item>commondolphin</item>
        <item>cuviersbeakedwhale</item>
        <item>falsekillerwhale</item>
        <item>finwhale</item>
        <item>gervaisbeakedwhale</item>
        <item>harbourporpoise</item>
        <item>humpbackwhale</item>
        <item>killerwhale</item>
        <item>longfinnedpilotwhale</item>
        <item>minkewhale</item>
        <item>northernbottlenosewhale</item>
        <item>northernrightwhale</item>
        <item>pygmyspermwhale</item>
        <item>rissosdolphin</item>
        <item>seiwhale</item>
        <item>sowerbysbeakedwhale</item>
        <item>spermwhale</item>
        <item>stripeddolphin</item>
        <item>truesbeakedwhale</item>
        <item>whitebeakeddolphin</item>
    </string-array>
    <string name="gmap_refresh">Check for New Sightings</string>
    <string name="search_species">Species</string>
    <string name="search_counties">County</string>
    <string-array name="counties_array">
        <item>Any...</item>
        <item>Antrim</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Derry</item>
        <item>Donegal</item>
        <item>Down</item>
        <item>Dublin</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Waterford</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="sighting_observer">Observer</string>
    <string name="sighting_species">Species</string>
    <string name="sighting_location">Locale</string>
    <string name="sighting_animals">Animals</string>
    <string name="sighting_date">Date</string>
    <string name="sighting_coordinates">Co-ordinates</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_telephone">Telephone</string>
    <string name="profile_email">Email</string>
    <string name="profile_member">Are you currently a IWDG member?</string>
    <string name="profile_dropTable">Clear all Sightings?</string>
    <string name="rssfeed_news">
        <![CDATA[http://www.iwdg.ie/index.php?option=com_k2&view=itemlist&task=category&id=1&Itemid=93&format=feed]]></string>
    <string name="rssfeed_sightings">http://www.iwdg.ie/_customphp/iscope/rss_sightings.php</string>
    <string name="rssfeed_strandings">http://www.iwdg.ie/_customphp/iscope/rss_strandings.php</string>
    <string name="content_description_species_item_image">species_list_item_image</string>
    <string name="joke_one">What do whales like to chew?\n\nBlubber gum!</string>
    <string name="joke_two">Where are whales weighed?\n\nAt a whale weigh station</string>
    <string name="joke_three">Did you hear about the flying whale?\n\nActually its a whale of a story.</string>
    <string name="joke_four">What do you call a baby whale?\n\nA little squirt!</string>
    <string name="joke_error">Ensure your connected to the internet to get the latest news!\n\nBut while you\'re here...</string>
    <string name="background_image">Whale 9-patch Image</string>
    <string name="login">Login</string>
    <string name="logout">Log out of Facebook</string>
    <string name="app_id">454897031307019</string>
    <string name="fb_submit">Post Sighting To Facebook</string>
    <string name="unsub_msg">Data connection available, submit previously unsubmitted Sightings?</string>
    <string name="unsub_submit">Submit</string>
    <string name="unsub_dontsubmit">Later</string>
    <string name="unsub_edit">Edit before Submission</string>
</resources>