<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/profile_name"
            android:ems="10"
            android:id="@+id/profile_name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/profile_telephone" android:text="@string/profile_telephone"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/profile_email" android:text="@string/profile_email"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profile_member"
            android:id="@+id/textView"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_yes"
                android:id="@+id/yes"
                android:checked="false"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_no"
                android:id="@+id/no"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_dropTable"
            android:id="@+id/profile_dropTable"/>
</LinearLayout>