<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/search_species"
                    android:id="@+id/search_species"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_species_spinner"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/search_counties"
                    android:id="@+id/search_county"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_county_spinner"/>
        </TableRow>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:id="@+id/search_cancel_btn" android:layout_weight="1"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search"
                    android:id="@+id/search_search_btn" android:layout_weight="1"/>
        </LinearLayout>


    </TableLayout>

</LinearLayout>