<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/submit_form_date"
                        android:id="@+id/submit_form_date" android:layout_weight="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/submit_form_date_input" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:id="@+id/linearLayout">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/submit_form_coordinates"
                        android:id="@+id/submit_form_coordinates" android:layout_weight="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/submit_form_latitude_input" android:layout_weight="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/submit_form_longitude_input" android:layout_weight="1"/>
            </LinearLayout>
            <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/submit_form_species"
                            android:id="@+id/submit_form_species"/>
                    <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/submit_form_spinner"/>
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceLarge"
                              android:text="@string/submit_form_animals" android:id="@+id/textView"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/submit_form_animals"/>
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/submit_form_location"
                            android:id="@+id/textView2" android:layout_weight="1"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:ems="10"
                            android:id="@+id/submit_form_location" android:layout_weight="1"/>
                </TableRow>
            </TableLayout>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_form_btn"
                    android:id="@+id/submit_form_btn" android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>